--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOSS = "vudovn"
+BOSS = "boyquang"
 API_CT_PHIM = "https://phimapi.com/phim/"
 API_THE_LOAI = "https://phimapi.com/the-loai/"
 API_CT_THE_LOAI = "https://phimapi.com/v1/api/the-loai/"
